compiler/tests/fa/errors/undefined_ident.salam
// انتظار: خطا۰۰۱
// زبان: فارسی
تابع اصلی:
    چاپ ناشناخته
تمام
